--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,40 @@
 # Node
 node_modules/
-dist/
-
-# Environment
-.env
-backend/.env
-frontend/.env
-
-# OS/system
-.DS_Store
-Thumbs.db
-
-# Logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# TypeScript build
+# Build output
+dist/
+build/
+out/
+.next/
+coverage/
+
+# Environment
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+backend/.env
+frontend/.env
+
+# OS / system
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+logs/
+pids/
+*.pid
+*.seed
+
+# TypeScript
 *.tsbuildinfo
+
+# Temporary
+tmp/
+temp/
